fix scrollbar

--- a/src/layouts/dashboard/dashboard.module.css
+++ b/src/layouts/dashboard/dashboard.module.css
@@ -13,5 +13,5 @@
 
 .center-con::-webkit-scrollbar-thumb {
   background: var(--app-primary-blue);
-  border-radius: 10px;
+  border-radius: 20px;
 }
